2002-02-09  Lauris Kaplinski  <lauris@ximian.com>

	* src/sodipodi.c (sodipodi_activate_desktop_private): Default method
	implementation to chain activation signal on desktop
	(sodipodi_desactivate_desktop_private): Ditto

	* src/desktop.c (sp_desktop_new): Owner does not have document pointer
	any more, so had to change signature here
	(sp_desktop_widget_init): Moved activation signals to public constructor
	(sp_dtw_desktop_activate): Activation signal handler
	(sp_dtw_desktop_desactivate): Ditto
	(sp_desktop_widget_new): Use desktop "activate" and "desactivate" signals
	instead of sodipodi ones, signature change
	(sp_desktop_class_init): Added "activate" and "desactivate" signals

	* src/dialogs/display-settings.c: Removed glade, made mostly dynamic

	* src/sodipodi.c (sodipodi_remove_desktop): Emit "destroy_desktop" if
	destroyed one was not active too
	(sodipodi_refresh_display): Convenience method

2002-02-08  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/document-properties.c: Do not use glade anymore, made
	everything dynamic

	* src/helper/canvas-grid.c (sp_grid_hline): Use helpers from ctrlrect
	(sp_grid_vline): Ditto
	(sp_cgrid_render): Render real grid instead of dots

	* src/xml/repr-util.c (sp_repr_get_boolean): Saner conveninence method
	(sp_repr_get_int): Ditto
	(sp_repr_get_double): Ditto
	(sp_repr_set_boolean): Ditto
	(sp_repr_set_int): Ditto
	(sp_repr_set_double): Ditto

	* src/svg/svg-length.c (sp_svg_read_length): Added meter

	* src/dialogs/sp-attribute-widget.c (sp_attribute_widget_changed): Kill warning
	(sp_attribute_widget_set_object): Ditto
	(sp_attribute_widget_object_modified): Ditto
	(sp_attribute_table_set_object): Ditto
	(sp_attribute_table_object_modified): Ditto
	(sp_attribute_table_entry_changed): Ditto

	* src/dialogs/desktop-properties.c: Do not use glade anymore, made
	everything dynamic

	* src/sp-namedview.c (sp_namedview_init): Do not init distances here,
	as ::build invokes full reread anyways