@@ -1,3 +1,6 @@
+#ifndef __GNOME_CANVAS_ACETATE_H__
+#define __GNOME_CANVAS_ACETATE_H__
+
 /* "Acetate" item type for GnomeCanvas widget. This item is invisible
  * but is there when you touch it.
  *
@@ -10,11 +13,9 @@
  *          Raph Levien <raph@acm.org>
  */
 
-#ifndef GNOME_CANVAS_ACETATE_H
-#define GNOME_CANVAS_ACETATE_H
+#include <libgnome/gnome-defs.h>
 
 BEGIN_GNOME_DECLS
-
 
 /* Acetate item for the canvas.
  *
@@ -30,9 +31,10 @@ BEGIN_GNOME_DECLS
 #define GNOME_IS_CANVAS_ACETATE(obj)         (GTK_CHECK_TYPE ((obj), GNOME_TYPE_CANVAS_ACETATE))
 #define GNOME_IS_CANVAS_ACETATE_CLASS(klass) (GTK_CHECK_CLASS_TYPE ((klass), GNOME_TYPE_CANVAS_ACETATE))
 
-
 typedef struct _GnomeCanvasAcetate GnomeCanvasAcetate;
 typedef struct _GnomeCanvasAcetateClass GnomeCanvasAcetateClass;
+
+#include <libgnomeui/gnome-canvas.h>
 
 struct _GnomeCanvasAcetate {
 	GnomeCanvasItem item;
