@@ -177,12 +177,14 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 {
 	SPNamedView *nv;
 	const gchar *astr;
+	const SPUnit *pt = NULL;
 	const SPUnit *px = NULL;
 	const SPUnit *mm = NULL;
 	GSList * l;
 
 	nv = SP_NAMEDVIEW (object);
 
+	if (!pt) pt = sp_unit_get_by_abbreviation ("pt");
 	if (!px) px = sp_unit_get_by_abbreviation ("px");
 	if (!mm) mm = sp_unit_get_by_abbreviation ("mm");
 
@@ -190,19 +192,24 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 
 	if (!strcmp (key, "viewonly")) {
 		nv->editable = (astr == NULL);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "showgrid")) {
 		nv->showgrid = sp_str_to_bool (astr);
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "snaptogrid")) {
 		nv->snaptogrid = sp_str_to_bool (astr);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "showguides")) {
 		nv->showguides = sp_str_to_bool (astr);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "snaptoguides")) {
 		nv->snaptoguides = sp_str_to_bool (astr);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "gridtolerance")) {
 		nv->gridtoleranceunit = px;
@@ -210,6 +217,7 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		if (astr) {
 			sp_nv_read_length (astr, SP_UNIT_ABSOLUTE | SP_UNIT_DEVICE, &nv->gridtolerance, &nv->gridtoleranceunit);
 		}
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "guidetolerance")) {
 		nv->guidetoleranceunit = px;
@@ -217,6 +225,7 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		if (astr) {
 			sp_nv_read_length (astr, SP_UNIT_ABSOLUTE | SP_UNIT_DEVICE, &nv->guidetolerance, &nv->guidetoleranceunit);
 		}
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (strcmp (key, "gridoriginx") == 0) {
 		nv->gridunit = mm;
@@ -224,7 +233,9 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		if (astr) {
 			sp_nv_read_length (astr, SP_UNIT_ABSOLUTE, &nv->gridoriginx, &nv->gridunit);
 		}
+		sp_convert_distance (&nv->gridoriginx, nv->gridunit, pt);
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "gridoriginy")) {
 		nv->gridunit = mm;
@@ -232,7 +243,9 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		if (astr) {
 			sp_nv_read_length (astr, SP_UNIT_ABSOLUTE, &nv->gridoriginy, &nv->gridunit);
 		}
+		sp_convert_distance (&nv->gridoriginy, nv->gridunit, pt);
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "gridspacingx")) {
 		nv->gridunit = mm;
@@ -240,7 +253,9 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		if (astr) {
 			sp_nv_read_length (astr, SP_UNIT_ABSOLUTE, &nv->gridspacingx, &nv->gridunit);
 		}
+		sp_convert_distance (&nv->gridspacingx, nv->gridunit, pt);
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "gridspacingy")) {
 		nv->gridunit = mm;
@@ -248,7 +263,9 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		if (astr) {
 			sp_nv_read_length (astr, SP_UNIT_ABSOLUTE, &nv->gridspacingy, &nv->gridunit);
 		}
+		sp_convert_distance (&nv->gridspacingy, nv->gridunit, pt);
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "gridcolor")) {
 		nv->gridcolor = (nv->gridcolor & 0xff) | (DEFAULTGRIDCOLOR & 0xffffff00);
@@ -256,11 +273,13 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 			nv->gridcolor = (nv->gridcolor & 0xff) | sp_svg_read_color (astr, nv->gridcolor);
 		}
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "gridopacity")) {
 		nv->gridcolor = (nv->gridcolor & 0xffffff00) | (DEFAULTGRIDCOLOR & 0xff);
 		sp_nv_read_opacity (astr, &nv->gridcolor);
 		sp_namedview_setup_grid (nv);
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "guidecolor")) {
 		nv->guidecolor = (nv->guidecolor & 0xff) | (DEFAULTGUIDECOLOR & 0xffffff00);
@@ -273,6 +292,7 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		for (l = nv->vguides; l != NULL; l = l->next) {
 			gtk_object_set (GTK_OBJECT (l->data), "color", nv->guidecolor, NULL);
 		}
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "guideopacity")) {
 		nv->guidecolor = (nv->guidecolor & 0xffffff00) | (DEFAULTGUIDECOLOR & 0xff);
@@ -283,6 +303,7 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		for (l = nv->vguides; l != NULL; l = l->next) {
 			gtk_object_set (GTK_OBJECT (l->data), "color", nv->guidecolor, NULL);
 		}
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "guidehicolor")) {
 		nv->guidehicolor = (nv->guidehicolor & 0xff) | (DEFAULTGUIDEHICOLOR & 0xffffff00);
@@ -295,6 +316,7 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		for (l = nv->vguides; l != NULL; l = l->next) {
 			gtk_object_set (GTK_OBJECT (l->data), "hicolor", nv->guidehicolor, NULL);
 		}
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	} else if (!strcmp (key, "guidehiopacity")) {
 		nv->guidehicolor = (nv->guidehicolor & 0xffffff00) | (DEFAULTGUIDEHICOLOR & 0xff);
@@ -305,6 +327,7 @@ sp_namedview_read_attr (SPObject * object, const gchar * key)
 		for (l = nv->vguides; l != NULL; l = l->next) {
 			gtk_object_set (GTK_OBJECT (l->data), "hicolor", nv->guidehicolor, NULL);
 		}
+		sp_object_request_modified (object, SP_OBJECT_MODIFIED_FLAG);
 		return;
 	}
 
@@ -341,7 +364,7 @@ sp_namedview_child_added (SPObject * object, SPRepr * child, SPRepr * ref)
 		if (nv->editable) {
 			for (l = nv->views; l != NULL; l = l->next) {
 				sp_guide_show (g, SP_DESKTOP (l->data)->guides, sp_dt_guide_event);
-				if (SP_DESKTOP (l->data)->owner->guides_active) sp_guide_sensitize (g, SP_DESKTOP (l->data)->owner->canvas, TRUE);
+				if (SP_DESKTOP (l->data)->guides_active) sp_guide_sensitize (g, SP_DT_CANVAS (l->data), TRUE);
 			}
 		}
 	}
@@ -385,12 +408,12 @@ sp_namedview_show (SPNamedView * nv, gpointer desktop)
 
 	for (l = nv->hguides; l != NULL; l = l->next) {
 		sp_guide_show (SP_GUIDE (l->data), dt->guides, sp_dt_guide_event);
-		if (dt->owner->guides_active) sp_guide_sensitize (SP_GUIDE (l->data), dt->owner->canvas, TRUE);
+		if (dt->guides_active) sp_guide_sensitize (SP_GUIDE (l->data), SP_DT_CANVAS (dt), TRUE);
 	}
 
 	for (l = nv->vguides; l != NULL; l = l->next) {
 		sp_guide_show (SP_GUIDE (l->data), dt->guides, sp_dt_guide_event);
-		if (dt->owner->guides_active) sp_guide_sensitize (SP_GUIDE (l->data), dt->owner->canvas, TRUE);
+		if (dt->guides_active) sp_guide_sensitize (SP_GUIDE (l->data), SP_DT_CANVAS (dt), TRUE);
 	}
 
 	nv->views = g_slist_prepend (nv->views, desktop);
@@ -471,7 +494,9 @@ static void
 sp_namedview_setup_grid_item (SPNamedView * nv, GnomeCanvasItem * item)
 {
 	const SPUnit *pt = NULL;
+#if 0
 	gdouble x0, y0, xs, ys;
+#endif
 
 	if (nv->showgrid) {
 		gnome_canvas_item_show (item);
@@ -481,6 +506,7 @@ sp_namedview_setup_grid_item (SPNamedView * nv, GnomeCanvasItem * item)
 
 	if (!pt) pt = sp_unit_get_identity (SP_UNIT_ABSOLUTE);
 
+#if 0
 	x0 = nv->gridoriginx;
 	sp_convert_distance (&x0, nv->gridunit, pt);
 	y0 = nv->gridoriginy;
@@ -497,6 +523,15 @@ sp_namedview_setup_grid_item (SPNamedView * nv, GnomeCanvasItem * item)
 			       "spacingx", xs,
 			       "spacingy", ys,
 			       NULL);
+#else
+	gnome_canvas_item_set (item,
+			       "color", nv->gridcolor,
+			       "originx", nv->gridoriginx,
+			       "originy", nv->gridoriginy,
+			       "spacingx", nv->gridspacingx,
+			       "spacingy", nv->gridspacingy,
+			       NULL);
+#endif
 }
 
 const gchar *
